Fix all tests, change post to put in itemdefinition
