# internal/api/models/model_put_business_item_definition_request.go
@@ -14,22 +14,18 @@ import (
 	"time"
 )
 
-type PatchBusinessItemDefinitionRequest struct {
-	PublicId string `json:"publicId,omitempty"`
-
+type PutBusinessItemDefinitionRequest struct {
 	Name string `json:"name,omitempty"`
 
-	Price int32 `json:"price,omitempty"`
+	Price *int32 `json:"price,omitempty"`
 
 	Description string `json:"description,omitempty"`
-
-	ImageId string `json:"imageId,omitempty"`
 
 	StartDate *time.Time `json:"startDate,omitempty"`
 
 	EndDate *time.Time `json:"endDate,omitempty"`
 
-	MaxAmount int32 `json:"maxAmount,omitempty"`
+	MaxAmount *int32 `json:"maxAmount,omitempty"`
 
 	Available bool `json:"available,omitempty"`
 }
